# shinybroker

./: .gitignore  .nojekyll  GITHUB.qmd  LICENSE  README.md  _quarto.yml  _sidebar.yml  headless_mode_demo.qmd  index.qmd  objects.json  pyproject.toml  query_and_display_market_data.qmd
_site/: search.json
_site/reference/: get_object.html  index.html  obj_defs.Contract.html  preview.html  sb_server.html
docs/: CNAME  GITHUB.md  GITHUB.qmd  _quarto.yml  get_started.html  get_started.qmd  headless_mode_demo.html  index.html  index.qmd  query_and_display_market_data.html  robots.txt  search.json  sitemap.xml  styles.css
docs/_site/: GITHUB.md  example_with_no_ui.py  get_started.html  index.html  search.json  sitemap.xml
docs/reference/: Contract.html  cancel_historical_data.html  cancel_mkt_data.html  create_ibkr_socket_conn.html  get_object.html  (+15 more)
examples/: basics_1.py  basics_2.py  basics_3.py  fetch_historical_data.py  fetch_matching_symbols.py  fetch_sec_def_opt_params.py  headless_mode_1.py  headless_mode_2.py  headless_mode_3.py  hello_world_2.py  start_historical_data_subscription.py
reference/: Contract.qmd  cancel_historical_data.qmd  cancel_mkt_data.qmd  create_ibkr_socket_conn.qmd  fetch_historical_data.qmd  fetch_matching_symbols.qmd  fetch_sec_def_opt_params.qmd  get_object.qmd  index.qmd  obj_defs.Contract.qmd  req_contract_details.qmd  req_current_time.qmd  req_historical_data.qmd  req_ids.qmd  req_market_data_type.qmd  req_matching_symbols.qmd  req_mkt_data.qmd  req_sec_def_opt_params.qmd  sb_server.qmd  start_historical_data_subscription.qmd
(+22 files in other folders)
