[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinybroker"
authors = [
  { name="Jake Vestal", email="jacob.vestal@duke.edu" }
]
description = "Python API for Interactive Brokers"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
license-files = { paths = ["LICENSE"] }
dependencies = [
    "faicons",
    "jinja2",
    "pandas",
    "shiny",
    "shinywidgets"
]

[project.optional-dependencies]
dev = [
    "quarto",
    "quartodoc",
    "hatch",
    "twine",
    "build"
]
examples = [
    "plotly",
    "scikit-learn",
    "statsmodels"
]

[project.urls]
url="https://github.com/JakeVestal/shinybroker"

[tool.hatch.version]
path = "src/shinybroker/__init__.py"
